Fix visibility of xaxis label for age chart

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
 
 #chart-age svg {
   padding-top: 1em;
+  overflow: visible;
 }
 
 .axis path, .axis line {
